--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+	--highlight-blue: #00c5ff;
+	--highlight-grey: #5c5c5c;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -24,8 +29,8 @@ body {
 main {
 	flex: 1;
 	display: grid;
-	grid-template-columns: 350px auto auto;
-	grid-template-rows: auto min-content;
+	grid-template-columns: 350px auto min-content min-content min-content;
+	grid-template-rows: min-content auto min-content;
 }
 
 
@@ -52,10 +57,8 @@ h2 {
 }
 
 section.map-section {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-end: 3;
+    grid-row: 1 / 4;
+    grid-column: 2;
 
 	display: flex;
 	flex-direction: column;
@@ -69,6 +72,8 @@ section.data-age {
 }
 
 section.counties {
+	grid-row: 1 / 3;
+	grid-column: 1;
     display: flex;
     flex-direction: column;
 }
@@ -98,12 +103,30 @@ section.counties .scroll-container table th {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 }
 
+section.cases-section, 
+section.deaths-section, 
+section.info-section {
+	grid-row: 1;
+	text-align: center;
+}
+
+section.cases-section h2, 
+section.deaths-section h2, 
+section.info-section h2 {
+	white-space: nowrap;
+}
+
+.daily-sum {
+	font-size: 2.5rem;
+	font-weight: 500;
+}
+
 .cases {
-    color:#00c5ff
+    color:var(--highlight-blue);
 }
 
 .deaths {
-    color: #5c5c5c;
+    color: var(--highlight-grey);
 }
 
 .map {
