--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 main {
 	flex: 1;
 	display: grid;
-	grid-template-columns: 350px auto min-content min-content min-content;
+	grid-template-columns: 350px auto 250px 250px 250px;
 	grid-template-rows: min-content auto min-content;
 }
 
@@ -136,6 +136,18 @@ section.info-section {
 
 .daily-diff {
 	border-top: var(--light-border);
+}
+
+.new-cases-per-day-section {
+	grid-column: 3/6;
+	grid-row: 2/4;
+
+	display: flex;
+	flex-direction: column;
+}
+
+.new-cases-per-day-section canvas {
+	flex: 1;
 }
 
 .cases {
