--- a/style.css
+++ b/style.css
@@ -342,3 +342,87 @@ section.info-section {
     background-color: black;
 	color: white;
 }
+
+@media (max-width: 1400px) and (min-width: 800px) {
+	section.counties {grid-row: 3; grid-column: 1;}
+
+	.development-graphs.navigatable {
+		grid-row: 2;
+		grid-column: 2/4;
+	}
+
+	section.map-section {
+		grid-row: 1/3;
+		grid-column: 1;
+	}
+
+	main {
+		grid-template-columns: auto 250px 250px;
+		grid-template-rows: auto 80vh 80vh;
+	}
+
+	section.data-age {
+		grid-row: 3;
+		grid-column: 2;
+	}
+
+	section.info-section {
+		grid-row: 3;
+		grid-column: 3;
+	}
+
+	section.cases-section.summed-section {
+		grid-row: 1;
+		grid-column: 2;
+	}
+
+	section.deaths-section.summed-section {
+		grid-row: 1;
+		grid-column: 3;
+	}
+}
+
+@media (max-width: 800px){
+	main {grid-template-columns: 50% 50%;}
+
+	section.counties {
+		grid-row: 4;
+		grid-column: 1/3;
+		height: 250px;
+		height: 80vh;
+	}
+
+	section.cases-section.summed-section {
+		grid-row: 1;
+		grid-column: 1;
+	}
+
+	section.deaths-section.summed-section {
+		grid-row: 1;
+		grid-column: 2;
+	}
+
+	section.map-section {
+		grid-row: 2;
+		grid-column: 1/3;
+		height: 250px;
+		height: 80vh;
+	}
+
+	.development-graphs.navigatable {
+		grid-row: 3;
+		grid-column: 1/3;
+		height: 250px;
+		height: 80vh;
+	}
+
+	section.data-age {
+		grid-row: 5;
+		grid-column: 1;
+	}
+
+	section.info-section {
+		grid-row: 5;
+		grid-column: 2;
+	}
+}
