--- a/style.css
+++ b/style.css
@@ -457,12 +457,18 @@ section.info-section {
 
 	section.map-section {
 		grid-row: 1/3;
-		grid-column: 1;
-	}
+    grid-column: 1;
+  }
+  
+  section.map-section aside.map-legend {
+    bottom: 1em;
+    left: 1em;
+    top: auto;
+  }
 
 	main {
 		grid-template-columns: auto 250px 250px;
-		grid-template-rows: auto 80vh 80vh;
+		grid-template-rows: 185px calc(80vh - 185px) 80vh;
 	}
 
 	section.data-age {
