Make sure table is at full width before adding content

--- a/src/style.css
+++ b/src/style.css
@@ -394,7 +394,8 @@ section.counties .scroll-container table {
     font-size: 1.2rem;
 	text-align: left;
 	border-collapse: collapse;
-	margin-top: 1rem;
+  margin-top: 1rem;
+  width: 100%;
 }
 
 section.counties td {
