--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ nav.section-nav {
     display: flex;
     margin-top: -5px;
     padding-left: 5px;
+    flex-wrap: wrap;
 }
 
 .section-nav > div {
@@ -548,13 +549,17 @@ section.info-section {
 }
 
 @media (max-width: 800px){
+  html {
+    font-size: 20px;
+  }
+
 	main {grid-template-columns: 50% 50%;}
 
 	section.counties {
 		grid-row: 4;
 		grid-column: 1/3;
 		height: 250px;
-		height: 80vh;
+		height: 100vh;
 	}
 
 	section.cases-section.summed-section {
@@ -578,7 +583,7 @@ section.info-section {
 		grid-row: 3;
 		grid-column: 1/3;
 		height: 250px;
-		height: 80vh;
+		height: 100vh;
 	}
 
 	section.data-age {
